# kmnist_sample

./: Dockerfile  pyproject.toml
kmnist_sample/: train.py
scripts/: build.sh  train.sh
